src/components/Popup/Popup.module.css
a, .videoListsBox {
  display: contents;
  margin: 0 auto;
}

.contentText {
  text-align: center;
  font-family: 'Courier New';
  overflow: hidden;
  font-size:1.1rem;
  line-height: 1.4;
  display: flex;
  justify-content: center;
  align-items: center;
  white-space: pre-line;
}

.author{
  text-align: center;
  font-family: 'Courier New';
  overflow: hidden;
  font-size:1.1rem;
}

/* Overlay */
.overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background: rgba(0,0,0,0.5);
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 1000;
}

/* Videó és film képek */
.musicPic{
  max-width: 100%;
  max-height: 35vh;   /* popup magasságának része */
  overflow: hidden;
  object-fit: contain;
  margin: 0 auto;
  display: block;
}

.videoLinks {
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
  gap: 0.5rem;   /* kisebb térköz a két logó között */
}

.videoPic {
  max-width: 100%;
  max-height: 36vh;   /* kisebb, hogy a film képhez képest fele legyen */
  object-fit: contain;
  overflow: hidden;
  display: block;
  margin: 0 auto;
}

.downloadPic {
  max-width: 100%;
  max-height: 40vh;   /* kisebb, hogy a film képhez képest fele legyen */
  object-fit: contain;
  overflow: hidden;
  display: block;
  margin: 0 auto;
}

.filmPic {
  max-width: 100%;
  max-height: 36vh;   /* kétszer akkora, mint a videoPic */
  object-fit: contain;
  margin: 0 auto;
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
}

.filmPic img {
  display: block;
  margin: 0 auto;
}

/* Kilépő gomb */
.closeBtn {
  position: absolute;
  top: 0.8rem;
  right: 0.8rem;
  background: transparent;
  border: none;
  font-size: 1.5rem;
  color: white;
  cursor: pointer;
}

/* Popup */
.popup {
  background: #1b5e5d;
  color: white;
  width: 90%;
  height: 80%;
  padding: 1rem;              /* auto helyett fix padding */
  border-radius: 8px;
  box-shadow: 0 4px 12px rgba(0,0,0,0.3);
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: flex-start; /* szöveg fent, kép alatta */
  gap: 1rem;                   /* kontrollált térköz */
}

/* Szöveges tartalom */
.content {
  text-align: center;
  font-family: 'Courier New';
  font-size:1.5rem;
  line-height: 1.4;
  padding: 3rem 0rem 1rem 0rem;
  white-space: pre-line;
}

.quiz {
  width:100%; 
  height:100%;
  text-align: center;
  margin:0;
}

.centered {
  flex: 1;                     /* kitölti a popup magasságát */
  display: flex;
  flex-direction: column; 
  justify-content: center;     /* vízszintesen */
  align-items: center;         /* vertikálisan */
  text-align: center;
  font-family: 'Courier New';
  font-size:1.5rem;
  padding: 1rem;
}
.centered p {
  display: block;      /* mindkettő új sorban */
  margin: 0.5rem 0;    /* kis térköz köztük */
}

/* Food típus */
.foodPic {
  display: flex;
  max-height: 70%;
  justify-content: center;
  align-items: center;
}
.foodPic img {
  max-width: 60%;
  max-height: 95%;
  object-fit: contain;    /* arányosan kicsinyítse */
  display: block;
  margin: 0 auto;
}

.santaImage {
  width: 100%;
  height: 100%; /* vagy amekkora kell */
  background-image: url("../../../public/Mikulas_desktop.png");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;

}

.xmasImage {
  width: 100%;
  height: 100%;
  background-image: url("../../../public/xmas_desktop.png");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;

}


/* Mobil */
@media (max-width: 768px) {
  .popup {
    max-width: 90%;
    font-size: 0.9rem;
    padding: 0.5rem; /* auto helyett fix */
    font-family: 'Courier New';
  }

  .content {
    overflow: hidden;
    text-align: center;
    font-family: 'Courier New';
    font-size:1.1rem;
    line-height: 1.4;
    white-space: pre-line;
  }

  .contentText {
    overflow: hidden;
    text-align: center;
    font-family: 'Courier New';
    font-size:1.1rem;
    line-height: 1.4;
    display: flex;
    justify-content: center;
    align-items: center;
    white-space: pre-line;
  }

  .author{
    text-align: center;
    font-family: 'Courier New';
    overflow: hidden;
    font-size:0.9rem;
  }

  .foodPic img {
    max-width: 100%;
    max-height: 55vh;   /* popup magasságához igazítva */
    object-fit: contain;
    overflow: hidden;
  }

  .videoPic {
    max-width: 100%;
    max-height: 25vh;
    object-fit: contain;
    overflow: hidden;
    margin: 0 auto;
  }
  .downloadPic {
  max-width: 100%;
  max-height: 20vh;
  object-fit: contain;
  overflow: hidden;
  display: block;
  margin: 0 auto;
}

  .filmPic img {
    max-width: 100%;
    max-height: 25vh;   /* kétszer akkora, mint a videoPic */
    object-fit: contain;
    margin: 0 auto;
    overflow: hidden;
    display: block;
  }

  .quiz {
  width:95%; 
  height:100%;
  align-self: center;
  margin:0;
}
.santaImage {
  width: 100%;
  height: 100%;
  background-image: url("../../../public/Mikulas_mobil.png");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;

}

.xmasImage {
  width: 100%;
  height: 100%;
  background-image: url("../../../public/xmas_mobil.png");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;

}
}

